OTS : Add help text to help the user reset a prefernce
Change-Id: I641bdb1fa5aea3e5c34c0be9610897035b41b235

--- a/core/res/res/values/custom_strings.xml
+++ b/core/res/res/values/custom_strings.xml
@@ -53,10 +53,18 @@
 
     <!-- Immersive mode confirmation: Pick confirmation window from bottom when status bar is visible -->
     <string name="immersive_mode_confirmation_bottom">Swipe up from the bottom to exit full screen.</string>
+
     <!-- Setting confirmation dialog strings. Shown when any ui interaction can be modified by user input -->
     <string name="setting_confirmation_ask_me_later">Ask later</string>
     <string name="setting_confirmation_yes">Yes</string>
     <string name="setting_confirmation_no">No</string>
+    <string name="setting_reset_hint_title">To reset preferences:</string>
+    <string name="setting_reset_hint_message">
+        <![CDATA[
+        <p>Open <b>Settings</b><br/>
+        Below Personal divider: <b>Backup & Reset</b><br/>
+        Below Personalization divider: <b>Reset preferences</b></p>
+        ]]></string>
 
     <!-- Safe headset volume warning dialog -->
     <string name="safe_headset_warning_title">Safe headset volume</string>
