add OTS IMPLEMENTATION for system wide behavior fist implementation 1st quick pulldown

--- a/core/res/res/values-es/custom_strings.xml
+++ b/core/res/res/values-es/custom_strings.xml
@@ -58,4 +58,6 @@
 
     <string name="toast_rotation_unlocked">Rotación de pantalla bloqueada</string>
     <string name="toast_rotation_locked">Rotación de pantalla desbloqueada</string>
+    <string name="setting_confirmation_ask_me_later">Mas tarde</string>
+    <string name="setting_confirmation_yes">Si</string>
 </resources>
