--- a/core/res/res/values/custom_strings.xml
+++ b/core/res/res/values/custom_strings.xml
@@ -61,4 +61,9 @@
     <!-- Safe headset volume warning dialog -->
     <string name="safe_headset_warning_title">Safe headset volume</string>
     <string name="safe_headset_warning_message">Would you like to disable the recommended volume level warning?</string>
+
+    <!-- [CHAR LIMIT=NONE] Title of an application permission, listed so the user can choose whether they want to allow the application to do this. -->
+    <string name="permlab_resetBatteryStats">reset battery statistics</string>
+    <!-- [CHAR LIMIT=NONE] Description of an application permission, listed so the user can choose whether they want to allow the application to do this. -->
+    <string name="permdesc_resetBatteryStats">Allows an application to reset the current low-level battery use data.</string>
 </resources> 
