--- a/packages/SystemUI/res/layout-sw600dp/quick_settings.xml
+++ b/packages/SystemUI/res/layout-sw600dp/quick_settings.xml
@@ -19,7 +19,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:id="@+id/settings_panel"
-    android:background="#FF000000"
+    android:background="@drawable/notification_panel_bg"
     >
     <LinearLayout
         android:layout_width="match_parent"
