--- a/packages/SystemUI/res/layout/status_bar_expanded_header.xml
+++ b/packages/SystemUI/res/layout/status_bar_expanded_header.xml
@@ -32,7 +32,7 @@
         android:layout_height="match_parent"
         android:enabled="false"
         >
-        <com.android.systemui.statusbar.policy.ClockStock
+        <com.android.systemui.statusbar.policy.Clock
             android:id="@+id/clock"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
