--- a/packages/SystemUI/res/layout/status_bar.xml
+++ b/packages/SystemUI/res/layout/status_bar.xml
@@ -147,6 +147,7 @@
         android:layout_gravity="center"
         android:gravity="center"
         android:singleLine="true"
+        android:visibility="gone"
         />
 
     <LinearLayout android:id="@+id/ticker"
